...
        <FrameLayout
            android:id="@+id/item_detail_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/prev_fab"
                app:fabSize="normal"
                android:src="@drawable/ic_prev"
                android:layout_margin="@dimen/fab_margin"
                android:layout_gravity="bottom|start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
...
